<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/walmartLogo"
        android:src="@drawable/walmartlogo"
        android:background="@drawable/rectangle"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="75sp"
        android:layout_marginRight="75sp"
        android:layout_marginBottom="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/signIn"
            android:textSize="21sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55sp"
        android:layout_marginRight="55sp"
        android:orientation="vertical"
        android:background="@drawable/lightrectangle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="1dp"
            android:text="@string/emailLogin" />

        <EditText
            android:id="@+id/usernameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="1dp"
            android:text="@string/passwordLogin" />

        <EditText
            android:id="@+id/passwordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/rectangle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/forgotPassword"
            android:paddingRight="17dp"
            android:layout_marginBottom="40dp"
            android:onClick="forgotPasswordClicked"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/blue"
            android:text="@string/signInButton"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:onClick="signInClicked"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/signUp"
            android:textColor="@android:color/black"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="@string/signUpButton"
            android:textColor="@color/blue"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="signUpClicked" />
    </LinearLayout>
</LinearLayout>