<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/registerHeader"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <EditText
        android:id="@+id/firstNameTextbox"
        android:layout_width="339dp"
        android:layout_height="37dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="22sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTextbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.634" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/firstName"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameTextbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="22dp"
        android:text="@string/requiredField"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/lastNameTextbox"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="22sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        android:editable="false"
        android:text="@string/lastName"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTextbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstNameTextbox" />

    <Button
        android:id="@+id/button"
        android:onClick="onRegisterClick"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="72dp"
        android:background="@color/blue"
        android:text="@string/registerButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextbox" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/emailTextbox"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:paddingLeft="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmartlogo" />

</androidx.constraintlayout.widget.ConstraintLayout>